--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 
 <!-- Cos principal -->
   <div class="main">
-    <h2>Lorum Ipsum</h2>
-    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+    <h2>Index HTML</h2>
+    <p>Repositori html pujat a github per fer-lo servir de Index</p>
   </div>
 
 <!-- Columna dreta -->
@@ -36,7 +36,7 @@
 
 <!-- Peu de pàgina -->
 <div class="peu">
-    © copyright Xavi Blanes 2025
+    © copyright Jordi Martínez 2025-2026
 </div>
 
 </body>
