--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 <!-- menú -->
 <div style="overflow:auto">
   <div class="menu">
-    <a href="/LMI/about.html">ABOUT</a>
-    <a href="/LMI/documentation.html">DOCUMENTATION</a>
-    <a href="/LMI/downloads.html">DOWNLOADS</a>
-    <a href="/LMI/community.html">COMMUNITY</a>
+    <a href="LMI/about.html">ABOUT</a>
+    <a href="LMI/documentation.html">DOCUMENTATION</a>
+    <a href="LMI/downloads.html">DOWNLOADS</a>
+    <a href="LMI/community.html">COMMUNITY</a>
   </div>
 
 <!-- Cos principal -->
