--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="css/estil.css">
+<link rel="stylesheet" href="LMI/estil.css">
 <title>My Page Title</title>
 </head>
 <body>
@@ -15,10 +15,10 @@
 <!-- menú -->
 <div style="overflow:auto">
   <div class="menu">
-    <a href="LMI/about.html">ABOUT</a>
-    <a href="LMI/documentation.html">DOCUMENTATION</a>
-    <a href="LMI/downloads.html">DOWNLOADS</a>
-    <a href="LMI/community.html">COMMUNITY</a>
+    <a href="/LMI/about.html">ABOUT</a>
+    <a href="/LMI/documentation.html">DOCUMENTATION</a>
+    <a href="/LMI/downloads.html">DOWNLOADS</a>
+    <a href="/LMI/community.html">COMMUNITY</a>
   </div>
 
 <!-- Cos principal -->
