--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="~/estil.css">
+<link rel="stylesheet" href="/estil.css">
 <title>My Page Title</title>
 </head>
 <body>
@@ -15,10 +15,10 @@
 <!-- menú -->
 <div style="overflow:auto">
   <div class="menu">
-    <a href="about.html">ABOUT</a>
-    <a href="documentation.html">DOCUMENTATION</a>
-    <a href="downloads.html">DOWNLOADS</a>
-    <a href="community.html">COMMUNITY</a>
+    <a href="/about.html">ABOUT</a>
+    <a href="/documentation.html">DOCUMENTATION</a>
+    <a href="/downloads.html">DOWNLOADS</a>
+    <a href="/community.html">COMMUNITY</a>
   </div>
 
 <!-- Cos principal -->
