Update links in index.html to remove leading slash

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 <!-- menú -->
 <div style="overflow:auto">
   <div class="menu">
-    <a href="/about.html">ABOUT</a>
-    <a href="/documentation.html">DOCUMENTATION</a>
-    <a href="/downloads.html">DOWNLOADS</a>
-    <a href="/community.html">COMMUNITY</a>
+    <a href="about.html">ABOUT</a>
+    <a href="documentation.html">DOCUMENTATION</a>
+    <a href="downloads.html">DOWNLOADS</a>
+    <a href="community.html">COMMUNITY</a>
   </div>
 
 <!-- Cos principal -->
