--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="/estil.css">
+<link rel="stylesheet" href="estil.css">
 <title>My Page Title</title>
 </head>
 <body>
